fixed admin panel three dots dropdown not showing on iphone

--- a/app/assets/stylesheets/admin_panel.scss
+++ b/app/assets/stylesheets/admin_panel.scss
@@ -67,6 +67,12 @@
   .dropdown-toggle::after {
     display: none !important;
   }
+
+  @include media-breakpoint-down(md) {
+    .dropdown-menu {
+      transform: none !important;
+    }
+  }
 }
 
 #manage-users-table {
